= CHANGES

== 0.9.8 (unreleased)

* Added layouts folder back into application skeleton
* Added support for forcing render of specified template (i.e render 'foo.haml' in js request) 

== 0.9.7

* Fixed a problem with folders called "sinatra" and PADRINO_IGNORE_CALLERS
* Fixed TestTask
* Fixed admin generator since not all ruby versions respond to "lines"
* Fixed an issue in Sinatra::ShowExceptions since Bundler changes the Gem.dir
* Removed from Sinatra::ShowExceptions and clean_backtrace padrino code
* Added layout finder with format and locale
* Improved template finder (with format and locale)
* Fixed a bug that duplicates admin menus during app reloading
* Added feed_tag helper for rss / atom auto discovery
* Removed Mailer Initializer from app.rb.tt and added it to the mailer generator
* Removed duplicate app folder in project skeleton
* Couchrest generator now include in Gemfile json_pure
* Fixed project name when using some like www.my-domain.com
* Fixed a small typo error in app template
* Fixes issue with formatted routes for an index
* Fixed an issue with Riot and RR in generator
* Cleaned up the implementation for asset include helpers for javascript and css
* Added stylesheet generator. Decouples from sass from haml generation. Includes sass and less ( via rack-less)

== 0.9.6

* Fixed an issue in controller generator when using --app=app_name
* Added mm:transate task for easily translate models
* Updated favicon_tag to search inside images folder
* Fixes an issue with rendering with layout false now you can use: render 'path/to/template', :layout => false
* Small helpers refactoring
* Fixed mailer initializer issue. Cleaned up options in delivery.rb
* Fixes tests in padrino helper

== 0.9.5

* Added the possibility for dsl lovers to create a single file in app called helpers.rb/controllers.rb/mailers.rb
* Changed generated scaffold now table rows didn't contains links
* Fixed a bug in reloader, now we prevent schema.rb reloading