@@ -61,21 +61,21 @@ body{font-size:12px;font-family:sans-serif;}
 .table td{padding:10px;}
 .table td.last{text-align:right;}
 /* forms */
-input.checkbox{margin:0;padding:0;}
+input.check_box{margin:0;padding:0;}
 .form .group{margin-bottom:15px;}
 .form div.left{width:20%;float:left;}
 .form div.right{width:75%;float:right;}
 .form .columns .column{width:48%;}
 .form .columns .left{float:left;}
 .form .columns .right{float:right;}
-.form label,.form input.text_field,.form textarea.text_area{font-size:1.0em;padding:2px 0;margin:0;color:#36393D;}
+.form label,.form input.text_field,.form input.password_field,.form textarea.text_area{font-size:1.0em;padding:2px 0;margin:0;color:#36393D;}
 .form label.right{text-align:right;}
-.form input.checkbox,.form input.radio{margin-right:5px;}
-.form label.checkbox,.form label.radio{line-height:1.5em;}
+.form input.check_box,.form input.radio{margin-right:5px;}
+.form label.check_box,.form label.radio{line-height:1.5em;}
 .form label{padding-bottom:2px;font-weight:bold;}
 .form .error{color:red;}
 .form a{color:red;font-size:14px;}
-.form input.text_field,.form textarea.text_area{width:100%;border-width:1px;border-style:solid;}
+.form input.text_field,.form input.password_field,.form textarea.text_area{width:100%;border-width:1px;border-style:solid;}
 .button_to{display:inline;}
 .button_to input{background:none;border:none;display:inline;font-size:12px;color:#A72D2E;cursor:pointer;}
 /* lists */
