@@ -16,7 +16,7 @@ p {
   line-height: 20px;
 }
 
-input.checkbox {
+input.check_box {
   vertical-align:middle;
 }
 
