@@ -170,7 +170,7 @@ hr {
 
 /* forms */
 
-.form input.text_field, .form textarea.text_area {
+.form input.text_field, .form input.password_field, .form textarea.text_area {
   width: 100%;
   border: 1px solid #262626;
 }
